# hector-rag

./: .gitignore  HybridPGVector.py  README.md  pyproject.toml  requirements.txt
examples/: HybridPGVector.py  main.py
hector/: __init__.py  hector.py
hector/core/: __init__.py  base.py
hector/fusion/: reciprocal_rank_fusion.py
hector/prompts/: templates.py
hector/retrievers/: __init__.py  graph_retriever.py  hybrid_retriever.py  keyword_retriever.py  semantic_retriever.py  similarity_retriever.py
hector/store/: __init__.py  graph_store.py  vector_store.py
hector/utils/: base.py
hector_rag/: __init__.py  hector.py
hector_rag/core/: __init__.py  base.py
hector_rag/fusion/: reciprocal_rank_fusion.py
hector_rag/prompts/: templates.py
hector_rag/retrievers/: __init__.py  graph_retriever.py  hybrid_retriever.py  keyword_retriever.py  semantic_retriever.py
