[tool.poetry]
name = "hector_rag"
version = "0.1.0"
description = "Advance hybrid rag imeplementation using Postgresql Vector DB"
authors = ["Swapnil Shinde <swapnilshinde9382@gmail.com>"]
packages = [{include = "hector_rag"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohappyeyeballs = "2.4.6"
aiohttp = "3.11.12"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
anyio = "4.8.0"
attrs = "25.1.0"
cachetools = "5.5.1"
certifi = "2025.1.31"
charset-normalizer = "3.4.1"
colorama = "0.4.6"
colorlog = "6.9.0"
dataclasses-json = "0.6.7"
langchain = "0.3.18"
semantic-router = "^0.0.72"
networkx = "3.4.2"
distro = "1.9.0"
filetype = "1.2.0"
frozenlist = "1.5.0"
google-ai-generativelanguage = "0.6.15"
google-api-core = "2.24.1"
google-api-python-client = "2.160.0"
google-auth = "2.38.0"
google-auth-httplib2 = "0.2.0"
google-generativeai = "0.8.4"
googleapis-common-protos = "1.66.0"
grpcio = "1.70.0"
grpcio-status = "1.70.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httplib2 = "0.22.0"
httpx = "0.28.1"
httpx-sse = "0.4.0"
idna = "3.10"
jiter = "0.8.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
langchain-community = "0.3.17"
langchain-core = "0.3.34"
langchain-experimental = "0.3.4"
langchain-google-genai = "2.0.9"
langchain-openai = "0.3.5"
langchain-text-splitters = "0.3.6"
langsmith = "0.3.8"
marshmallow = "3.26.1"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
numpy = "1.26.4"
openai = "1.61.1"
orjson = "3.10.15"
packaging = "24.2"
propcache = "0.2.1"
proto-plus = "1.26.0"
protobuf = "5.29.3"
psycopg2 = "2.9.10"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pydantic = "2.10.6"
pydantic-settings = "2.7.1"
pydantic-core = "2.27.2"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2025.1"
pyyaml = "6.0.2"
regex = "2024.11.6"
requests = "2.32.3"
requests-mock = "1.12.1"
requests-toolbelt = "1.0.0"
rsa = "4.9"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.38"
tenacity = "9.0.0"
tiktoken = "0.8.0"
tqdm = "4.67.1"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2025.1"
uritemplate = "4.1.1"
urllib3 = "2.3.0"
yarl = "1.18.3"
zstandard = "0.23.0"
setuptools = "^75.8.0"
wheel = "^0.45.1"
twine = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
