[tool.poetry]
name = "hector_rag"
version = "0.1.1"
description = "Advance hybrid rag imeplementation using Postgresql Vector DB"
authors = ["Atmega Buzz <atmegabuzz@gmail.com>"]
packages = [{include = "hector_rag"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.3.18"
semantic-router = "^0.0.72"
networkx = "^3.4.2"
langchain-openai = "^0.3.5"
psycopg2 = "^2.9.10"
langchain-experimental = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
